# nali-c

./: .gitignore  Makefile  Makefile.in  README.md  config.h  config.h.in~  config.status  configure  configure.ac  main.c  nali  nali-update  qqwry.h
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: Makefile  Makefile.am  Makefile.in  main.c  nali  nali-update
src/.deps/: main.Po  qqwry.Po
